<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent" android:layout_height="match_parent">
<RelativeLayout
    android:id="@+id/helper_nodata"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:visibility="gone"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="@dimen/dimen_128dp"
            android:layout_height="@dimen/dimen_128dp"
            android:src="@drawable/ic_no_data"/>
        <TextView
            android:layout_marginTop="@dimen/dimen_18dp"
            android:id="@+id/tv_nodata"
            style="@style/Text.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/helper_nodata"/>
    </LinearLayout>
</RelativeLayout>
<RelativeLayout
    android:id="@+id/helper_noconversation"
    android:layout_width="match_parent"
    android:visibility="gone"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="@dimen/dimen_180dp"
            android:layout_height="@dimen/dimen_140dp"
            android:src="@drawable/ic_chat_kosong"/>
        <TextView
            android:layout_marginTop="@dimen/dimen_8dp"
            android:id="@+id/tv_noconversation"
            style="@style/Text.Standard.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/helper_noconversation"/>
        <TextView
            android:layout_marginTop="@dimen/dimen_4dp"
            style="@style/Text.Title"
            android:layout_marginLeft="@dimen/dimen_16dp"
            android:layout_marginRight="@dimen/dimen_16dp"
            android:id="@+id/tv_startnewconversation"
            android:textColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:text="@string/helper_noconversationstart"/>
    </LinearLayout>
</RelativeLayout>
<RelativeLayout
    android:id="@+id/helper_noconnection"
    android:layout_width="match_parent"
    android:visibility="gone"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="@dimen/dimen_180dp"
            android:layout_height="@dimen/dimen_140dp"
            android:src="@drawable/ic_no_connection"/>
        <TextView
            android:layout_margin="@dimen/dimen_16dp"
            style="@style/Text.Standard.Bold"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/helper_noconnection"/>
        <Button
            android:id="@+id/btn_tryconnection"
            style="@style/ButtonStyle"
            android:text="@string/button_tryagain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</RelativeLayout>
<RelativeLayout
    android:id="@+id/helper_servererror"
    android:layout_width="match_parent"
    android:visibility="gone"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="@dimen/dimen_180dp"
            android:layout_height="@dimen/dimen_140dp"
            android:src="@drawable/ic_something_wrong"/>
        <TextView
            android:layout_margin="@dimen/dimen_16dp"
            style="@style/Text.Standard.Bold"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/helper_servererror"/>
        <Button
            android:id="@+id/btn_tryservererror"
            style="@style/ButtonStyle"
            android:text="@string/button_tryagain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</RelativeLayout>
<RelativeLayout
    android:id="@+id/helper_no_konten_bersama"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:visibility="gone"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_140dp"
            android:src="@drawable/ic_konten_bersama"/>
        <TextView
            android:layout_margin="@dimen/dimen_16dp"
            style="@style/Text.Standard.Bold"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/helper_kontenbersama"/>
    </LinearLayout>
</RelativeLayout>
<RelativeLayout
    android:id="@+id/helper_no_pesanberbintang"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:visibility="gone"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_140dp"
            android:src="@drawable/ic_pesan_berbintang"/>
        <TextView
            android:layout_margin="@dimen/dimen_16dp"
            style="@style/Text.Standard.Bold"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/helper_kontenbersama"/>
    </LinearLayout>
</RelativeLayout>
<RelativeLayout
    android:id="@+id/helper_nodata_text"
    android:layout_width="match_parent"
    android:visibility="gone"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dimen_48dp"
        android:layout_marginBottom="@dimen/dimen_48dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginTop="@dimen/dimen_8dp"
            android:id="@+id/tv_nodata_text"
            style="@style/Text.Standard.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Data tidak ditemukan"/>
    </LinearLayout>
</RelativeLayout>
    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/helper_loading_more"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_alignParentBottom="true"
            android:padding="@dimen/dimen_8dp"
            android:background="@color/grey_600"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ProgressBar
                android:layout_width="@dimen/dimen_12dp"
                android:layout_height="@dimen/dimen_12dp" />
            <TextView
                android:layout_marginLeft="@dimen/dimen_8dp"
                android:textColor="@color/white"
                style="@style/Text.Caption"
                android:text="Sedang memuat data..."
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </RelativeLayout>
<RelativeLayout
    android:visibility="gone"
    android:id="@+id/helper_loading"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_logo"/>
            <ProgressBar
                android:layout_width="80dp"
                android:layout_height="80dp" />
        </RelativeLayout>
        <TextView
            android:layout_marginTop="@dimen/dimen_18dp"
            style="@style/Text.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/helper_loading"/>
    </LinearLayout>
</RelativeLayout>
<com.gamatechno.chato.sdk.utils.animation.AnimationToggle
    android:visibility="gone"
    android:id="@+id/helper_loading_top"
    android:layout_width="match_parent"
    android:padding="@dimen/dimen_8dp"
    android:orientation="vertical"
    android:background="@color/grey_600"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/tv_loading_top"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/dimen_8dp"
        android:textColor="@color/white"
        style="@style/Text.Caption"
        android:text="Sedang memuat data..."
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</com.gamatechno.chato.sdk.utils.animation.AnimationToggle>

</RelativeLayout>